Fix css on <img> to allow scaling on mobile
Because it was ugly

--- a/css/main.css
+++ b/css/main.css
@@ -397,6 +397,7 @@ footer > div div svg {
         padding: 50px 15px;
     }
     .point-block img {
+        height: auto;
         max-width: 100%;
     }
 
